--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <input id= "first-class-value" class="inp-style inp-width" value ="0" type="number" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <button onclick="handleTicket('first-class', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button onclick="handleTicket('first-class', true)" class="btn btn-default">+</i></button>
                     <button onclick="handleTicket('first-class', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
                     
                 </div>
