--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="plus-minus-btn">
                     <button onclick="handleTicket('first-class', true)" class="btn btn-default">+</i></button>
-                    <button onclick="handleTicket('first-class', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <button onclick="handleTicket('first-class', false)" class="btn btn-default">-</i></button>
                     
                 </div>
             </div>
@@ -67,8 +67,8 @@
                     <input  id= "Economy-value" class="inp-style inp-width" value="0" type="number" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <button onclick="handleTicket('Economy', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
-                    <button onclick="handleTicket('Economy', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <button onclick="handleTicket('Economy', true)" class="btn btn-default">+</i></button>
+                    <button onclick="handleTicket('Economy', false)" class="btn btn-default">-</i></button>
                 </div>
             </div>
             <div class="calculations">
